--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste deserunt vitae impedit enim blanditiis consectetur vel asperiores, aperiam temporibus esse tenetur quidem similique earum ex mollitia. Nisi exercitationem laborum quasi!</p>
 </body>
 </html>
